@@ -80,6 +80,91 @@ box-shadow: 0 10px 6px -6px #777;
 
 /*---------buttons---------*/
 /*-------------------------*/
+/*--start button--*/
+/*has a active mode*/
+.start_button
+{
+background:#D4D4D4;
+padding:5px;
+margin: 2px;
+display: inline-block;
+cursor:pointer;
+border:1px solid #484848;
+border-radius:5px;
+}
+    .start_button:hover
+    {
+    background:#B8DBFF;
+    }
+    .start_button:active
+    {
+    background:#B2B2B2;
+    }
+/*--start button--*/
+/*-----------------*/
+
+
+/*--copy button--*/
+/*has a active mode*/
+.copy_button
+{
+background:#D4D4D4;
+padding:5px;
+margin: 2px;
+display: inline-block;
+cursor:pointer;
+border:1px solid #484848;
+border-radius:5px;
+}
+    .copy_button:hover
+    {
+    background:#B8DBFF;
+    }
+    .copy_button:active
+    {
+    background:#B2B2B2;
+    }
+/*--copy button--*/
+/*---------------*/
+
+
+/*--Launch button--*/
+/*has a active mode*/
+.replay_code_submit
+{
+background:#D4D4D4;
+padding:5px;
+margin: 2px;
+display: inline-block;
+cursor:pointer;
+border:1px solid #484848;
+border-radius:5px;
+}
+    .replay_code_submit:hover
+    {
+    background:#B8DBFF;
+    }
+    .replay_code_submit:active
+    {
+    background:#B2B2B2;
+    }
+/*--Launch button--*/
+/*-----------------*/
+
+
+/*--Replay Input--*/
+/*has a active mode*/
+.replay_input
+{
+
+}
+    .replay_input:active
+    {
+    
+    }
+/*--Replay Input--*/
+/*-----------------*/
+
 
 
 /*--Answer Button--*/
@@ -108,10 +193,9 @@ box-shadow: 0 10px 6px -6px #777;
     .guide_element_answerbutton_selected
     {
     color: #fbf4f4;
-    color: #fbf4f4;
-    border:2px solid #a1a1a1;
     padding:5px;
     background:#084E2E;
+    border:2px solid #a1a1a1;
     border-radius:25px;
     display: inline-block;
 
@@ -123,63 +207,53 @@ box-shadow: 0 10px 6px -6px #777;
 /*-----------------*/
 
 
+
 /*--remove button--*/
 /*has a active mode*/
-.remove_button
+.remove_button 
 {
-float:right;
+float: right;
+background:#D4D4D4;
+padding:5px;
+margin: 2px;
+display: inline-block;
+cursor:pointer;
+border:1px solid #484848;
+border-radius:5px;
 }
+    .remove_button:hover
+    {
+    background:#B8DBFF;
+    }
+    .remove_button:active 
+    {
+    background: #B2B2B2;
+    }
 /*--remove button--*/
 /*-----------------*/
-
-
-/*--copy button--*/
-/*has a active mode*/
-.copy_button
-{
-
-}
-/*--copy button--*/
-/*---------------*/
-
 
 /*--Reset button--*/
 /*has a active mode*/
 .reset_button
 {
-
+background:#D4D4D4;
+padding:5px;
+margin: 2px;
+display: inline-block;
+cursor:pointer;
+border:1px solid #484848;
+border-radius:5px;
 }
+    .reset_button:hover
+    {
+    background:#B8DBFF;
+    }
+    .reset_button:active {
+    background: #B2B2B2;
+    }
 /*--Reset button--*/
 /*-----------------*/
 
-
-/*--Replay Input--*/
-/*has a active mode*/
-.replay_input
-{
-
-}
-/*--Replay Input--*/
-/*-----------------*/
-
-/*--Launch button--*/
-/*has a active mode*/
-.replay_Code_submit
-{
-
-}
-/*--Launch button--*/
-/*-----------------*/
-
-
-/*--start button--*/
-/*has a active mode*/
-.start_button
-{
-
-}
-/*--start button--*/
-/*-----------------*/
 
 /*---------buttons---------*/
 /*-------------------------*/
