@@ -1,0 +1,150 @@
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<Guide>
+    <guidename guideid="AA" version="0.1">
+        Demo_Guide 
+    </guidename>
+
+    <!--First Element -->
+			<element elname="First_Element">
+				<question>
+                    <![CDATA[Please Select the browser you are currently using:]]>
+                </question>
+
+				<answer atarget = "Chrome_CCC" >
+				    <![CDATA[Chrome:  <img src="/images/compatible_chrome.gif" alt="Google Chrome"></img>]]>
+				</answer>
+
+                <answer atarget = "Firefox_CCC" >
+				    <![CDATA[Firefox: <img src="/images/compatible_firefox.gif" alt="Firefox"></img>]]>
+				</answer>
+
+                <answer atarget = "IE_CCC" >
+				    <![CDATA[IE: <img src="/images/compatible_ie.gif" alt="Internet Exploer"></img>]]>
+				</answer>
+
+				<answer atarget = "Safari_CCC" >
+				    <![CDATA[Safari: <img src="/images/compatible_safari.gif" alt="Safari"></img>]]>
+				</answer>
+
+                <answer atarget = "browser_not_listed" >
+				    <![CDATA[My Browser is not Listed.]]>
+				</answer>
+			</element>
+
+    <!--Resolved -->
+			<element elname="resolved">
+				<question>
+                    <![CDATA[Thank you using the Pearson Self assistance system.]]>
+                </question>
+			</element>
+
+    <!-- browser not listed-->
+			<element elname="browser_not_listed">
+				<question>
+                    <![CDATA[Please use a Supported browser and try again. The system supports IE, Firefox, Google Chrome, and Safari]]>
+                </question>
+			</element>
+			
+    <!--Chrome -->
+			<element elname="Chrome_CCC">
+				<question>
+                    <![CDATA[<iframe width="560" height="315" src="//www.youtube.com/embed/-kJvSmlLC28" frameborder="0"></iframe>]]>
+                </question>
+				<answer atarget ="resolved">
+                    <![CDATA[My Issue resolved]]>
+				</answer>
+				<answer atarget ="select_OS">
+                    <![CDATA[My Issue is not resolved]]>
+				</answer>
+			</element>
+
+    <!--IE -->
+			<element elname="IE_CCC">
+				<question>
+                    <![CDATA[<iframe width="420" height="315" src="//www.youtube.com/embed/gK4kYn9ETgU" frameborder="0"></iframe>]]>
+                </question>
+				<answer atarget ="resolved">
+                    <![CDATA[My Issue resolved]]>
+				</answer>
+                <answer atarget ="select_OS">
+                    <![CDATA[My Issue is not resolved]]>
+				</answer>
+			</element>
+
+    <!--Firefox -->
+			<element elname="Firefox_CCC">
+				<question>
+                    <![CDATA[<iframe width="420" height="315" src="//www.youtube.com/embed/idKDZAv66Dg" frameborder="0"></iframe>]]>
+                </question>
+				<answer atarget ="resolved">
+                    <![CDATA[My Issue resolved]]>
+				</answer>
+                <answer atarget ="select_OS">
+                    <![CDATA[My Issue is not resolved]]>
+				</answer>
+			</element>
+
+
+    <!--Safari -->
+			<element elname="Safari_CCC">
+				<question>
+                    <![CDATA[<iframe width="560" height="315" src="//www.youtube.com/embed/wIKW44231F0" frameborder="0"></iframe>]]>
+                </question>
+				<answer atarget ="resolved">
+                    <![CDATA[My Issue resolved]]>
+				</answer>
+                <answer atarget ="select_OS">
+                    <![CDATA[My Issue is not resolved]]>
+				</answer>
+			</element>
+
+
+    <!--What is you OS  -->
+			<element elname="select_OS">
+				<question>
+                    <![CDATA[Please Select you Operating System.]]>
+                </question>
+				<answer atarget ="alt_browser_win">
+                    <![CDATA[Microft Windows: <img src="/images/windows_logo.png" alt="Windows Logo"></img>]]>
+				</answer>
+				<answer atarget ="alt_browser_mac">
+                    <![CDATA[Apple:  <img src="/images/apple_logo.png" alt="Apple logo"></img>]]>
+				</answer>
+			</element>
+
+    <!-- Alt Browser Wondows -->
+			<element elname="alt_browser_win">
+				<question>
+                    <![CDATA[<span>Please try an alternet browser. On windows, IE forefox and Google Chrome are supported.</span></br><a href="https://www.google.com/chrome/browser/" target="_blank"><img src="/images/compatible_chrome.gif" alt="Download Google Chrome"></img></a> <a href="https://www.mozilla.org/en-US/firefox/new/?utm_source=firefox-com&utm_medium=referral" target="_blank"><img src="/images/compatible_firefox.gif" alt="Download Firefox"></img></a>]]>
+                </question>
+				<answer atarget ="resolved">
+                    <![CDATA[My Issue resolved]]>
+				</answer>
+                <answer atarget ="call_hd">
+                    <![CDATA[My Issue is not resolved]]>
+				</answer>
+			</element>
+
+
+    <!-- Alt Browser Mac -->
+			<element elname="alt_browser_mac">
+				<question>
+                    <![CDATA[<span>Please try an alternet browser. On Apple Computers; Safari, Forefox and Google Chrome are supported.</span></br><a href="https://www.google.com/chrome/browser/" target="_blank"><img src="/images/compatible_chrome.gif" alt="Download Google Chrome"></img></a> <a href="https://www.mozilla.org/en-US/firefox/new/?utm_source=firefox-com&utm_medium=referral" target="_blank"><img src="/images/compatible_firefox.gif" alt="Download Firefox"></img></a>]]>
+                </question>
+				<answer atarget ="resolved">
+                    <![CDATA[My Issue resolved]]>
+				</answer>
+                <answer atarget ="call_hd">
+                    <![CDATA[My Issue is not resolved]]>
+				</answer>
+			</element>
+
+
+    <!--Call in-->
+			<element elname="call_hd">
+				<question>
+                    <![CDATA[Unfortunately, you have reached the end of the self service guide system. Please contact the helpdesk for further assistance.]]>
+                </question>
+			</element>
+</Guide>
+
