@@ -1,13 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <guide_list>
-    <guidename guideloc = "/guides/Technical_Troubleshooting.xml" guideid="LG" is_selectable="true">
+    <guidename guideloc = "/guides/Technical_Troubleshooting.xml" guideid="LG" is_selectable="False">
         Technical_Troubleshooting
     </guidename>
-    <guidename guideloc = "Subscription_Troubleshooting.xml" guideid="SG" is_selectable="true">
-        Subscription_Troubleshooting
-    </guidename>
-    <guidename guideloc = "account_Troubleshooting.xml" guideid="AG" is_selectable="False">
-        account_Troubleshooting
+    <guidename guideloc = "/guides/log_in_error.xml" guideid="AA" is_selectable="true">
+        Log In Error
     </guidename>
 </guide_list>
 
