@@ -100,3 +100,9 @@
 2014-05-08:
 1. Updated CSS to have definitions for buttons. 
 2. Added Commented Definiations for Button variables. 
+
+2014-05-11:
+1. Added CSS functionality for buttons
+2. Added makediv functionality for making buttons and added variables to hold div referance.
+3. Created a Template for XML files
+4. Created a Demo Guide with images 
